--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,67 @@
-name: HTML5 Game Development Tutorial
-markdown: redcarpet
-pygments: true
+title:            HTML5 Game Dev Tutorial
+description:      Building a gaggle of games in Quintus
+logo:             site-logo.png
+disqus_shortname: 
+#Comment out url when working locally to resolve base urls correctly
+#url:              http://your-website.com
+
+# Owner/author information
+owner:
+  name:           Pascal Rettig
+  avatar:         pascal-rettig.jpg
+  email:          html5game@cykod.com
+  # Social networking links used in footer. Update and remove as you like.
+  twitter:        
+  facebook:       
+  github:         
+  stackexchange:  
+  linkedin:       
+  instagram:      
+  flickr:         
+  tumblr:         
+  # For Google Authorship https://plus.google.com/authorship
+  google_plus:    
+
+# Analytics and webmaster tools stuff goes here
+google_analytics:   
+google_verify:      
+# https://ssl.bing.com/webmaster/configure/verify/ownership Option 2 content= goes here
+bing_verify:         
+
+# Links to include in top navigation
+# For external links add external: true
+links:
+  - title: Home
+    url: /
+  - title: Quintus Home
+    url: http://html5quintus.com
+    external: true
+  - title: Quintus Guide
+    url: http://html5quintus.com/guide/intro.md
+    external: true
+
+# http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+timezone:    America/New_York
+future:      true
+pygments:    true
+markdown:    redcarpet
+
+# https://github.com/mojombo/jekyll/wiki/Permalinks
+permalink:   /:categories/:title
+
+kramdown:
+  auto_ids: true
+  footnote_nr: 1
+  entity_output: as_char
+  toc_levels: 1..6
+  use_coderay: false
+
+  coderay:
+    coderay_line_numbers: 
+    coderay_line_numbers_start: 1
+    coderay_tab_width: 4
+    coderay_bold_every: 10
+    coderay_css: class
+
+include: [".htaccess"]
+exclude: ["lib", "config.rb", "Capfile", "config", "log", "Rakefile", "Rakefile.rb", "tmp", "less", "*.sublime-project", "*.sublime-workspace", "test", "spec"]
